--- a/src/devices/Bmi160/Bmi160.csproj
+++ b/src/devices/Bmi160/Bmi160.csproj
@@ -3,4 +3,10 @@
     <TargetFrameworks>$(DefaultBindingTfms)</TargetFrameworks>
     <EnableDefaultItems>false</EnableDefaultItems>
   </PropertyGroup>
+<ItemGroup>
+    <Compile Include="*.cs" />
+    <Compile Include="Models/*.cs" />
+    <Compile Remove="Models.cs\**" />
+    <PackageReference Include="System.Memory" Version="$(SystemMemoryPackageVersion)" />
+  </ItemGroup>
 </Project>
